<resources>
    <string name="app_name">Android Challenge</string>
    <string name="shows">Shows</string>
    <string name="search">Search</string>
    <string name="my_library">My library</string>
    <string name="poster">poster</string>
    <string name="rating">rating</string>
    <string name="out_of_ten">/10</string>
    <string name="episodes">Episodes</string>
    <string name="summary">Summary</string>
    <string name="genres">Genres</string>
    <string name="episode_screenshot">episode screenshot</string>
    <string name="no_shows_found">No shows found</string>
    <string name="no_favorites_found">No favorite shows found</string>
    <string name="airs_at">Airs at %</string>
    <string name="failed_to_fetch_episodes">Failed to fetch episodes of show</string>
    <string name="generic_error">Error</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="favorite_shows">Favorite shows</string>
    <string name="menu">menu</string>
    <string name="remove">Remove</string>
    <string name="msg_no_fav_shows">You don\'t have any show on your favorites :(</string>
    <string name="show_added_to_favorites">%s added to your favorites</string>
    <string name="show_removed_from_favorites">%s removed from your favorites</string>
    <string name="runtime">Runtime: %s</string>
    <string name="back">back</string>
</resources>