<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View"/>

        <variable
            name="show"
            type="com.jobsity.android.challenge.domain.model.ShowDetails" />
    </data>

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraint_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                tools:visibility="visible">

                <ImageView
                    android:id="@+id/iv_poster"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/poster_height"
                    android:contentDescription="@string/poster"
                    android:scaleType="centerCrop"
                    app:image_url="@{show.poster}"
                    app:layout_constraintDimensionRatio="11:16"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toTopOf="@id/guideline_top"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin"
                    android:text="@{show.name}"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toEndOf="@id/iv_poster"
                    app:layout_constraintTop_toTopOf="@id/guideline_top"
                    tools:text="Game of Thrones" />

                <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginTop="@dimen/quarter_margin"
                    android:text="@{String.valueOf(show.year)}"
                    app:layout_constraintStart_toEndOf="@id/iv_poster"
                    app:layout_constraintTop_toBottomOf="@id/tv_name"
                    tools:text="1999" />

                <TextView
                    android:id="@+id/tv_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/margin"
                    android:layout_marginTop="@dimen/quarter_margin"
                    android:text="@{String.valueOf(show.rating)}"
                    android:textSize="22sp"
                    app:layout_constraintBottom_toBottomOf="@id/iv_poster"
                    app:layout_constraintStart_toEndOf="@id/iv_poster"
                    app:layout_constraintTop_toBottomOf="@id/tv_airs_at"
                    tools:text="9.5" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/quarter_margin"
                    android:text="@string/out_of_ten"
                    app:layout_constraintBottom_toBottomOf="@id/tv_rating"
                    app:layout_constraintStart_toEndOf="@id/tv_rating"
                    app:layout_constraintTop_toTopOf="@id/tv_rating" />

                <TextView
                    android:id="@+id/tv_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/quarter_margin"
                    android:text="@{`/ ` + show.status}"
                    app:layout_constraintStart_toEndOf="@id/tv_year"
                    app:layout_constraintTop_toTopOf="@id/tv_year"
                    tools:text="/ Ended" />

                <TextView
                    android:id="@+id/tv_airs_at"
                    app:layout_constraintTop_toBottomOf="@id/tv_status"
                    android:layout_width="0dp"
                    android:layout_marginStart="@dimen/margin"
                    android:layout_marginTop="@dimen/quarter_margin"
                    app:layout_constraintStart_toEndOf="@id/iv_poster"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    tools:text="Airs at Monday, 10pm"
                    android:visibility="@{show.airsAt != null ? View.VISIBLE : View.GONE}"
                    android:text="@{`Airs at ` + show.airsAt}"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/tv_summary_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:gravity="center_vertical"
                    android:text="@string/summary"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/iv_poster" />

                <TextView
                    android:id="@+id/tv_summary"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_margin"
                    android:lineSpacingMultiplier="@dimen/line_spacing_for_readability"
                    app:html_text="@{show.summary}"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/tv_summary_label"
                    tools:text="Under the Dome is the story of a small town that is suddenly and inexplicably sealed off from the rest of the world by an enormous transparent dome. The town's inhabitants must deal with surviving the post-apocalyptic conditions while searching for answers about the dome, where it came from and if and when it will go away." />

                <TextView
                    android:id="@+id/tv_genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:gravity="center_vertical"
                    android:text="@string/genres"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/tv_summary" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_genres"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_margin"
                    android:orientation="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/tv_genres"
                    tools:listitem="@layout/item_genre" />

                <!--<View
                    android:background="@color/bg_genres"
                    app:layout_constraintTop_toTopOf="@id/tv_genres"
                    app:layout_constraintBottom_toBottomOf="@id/rv_genres"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    />-->

                <TextView
                    android:id="@+id/tv_episodes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin"
                    android:gravity="center_vertical"
                    android:text="@string/episodes"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end"
                    app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/rv_genres" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_episodes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/half_margin"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintEnd_toStartOf="@id/guideline_end" app:layout_constraintStart_toStartOf="@id/guideline_start"
                    app:layout_constraintTop_toBottomOf="@id/tv_episodes"
                    tools:listitem="@layout/item_episode" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_begin="@dimen/margin" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_end"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_end="@dimen/margin" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline_top"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintGuide_begin="@dimen/margin" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            tools:visibility="gone" />

    </FrameLayout>
</layout>
